fix: popup time and score and moves proper visibility

--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@ header {
   margin: 0;
 }
 
-#timer-container {
+.timer-container {
+  
+}
+
+#board-timer {
   font-size: 6vmin;
 }
 
